[gd_scene load_steps=13 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/plasmaball/particle.png" type="Texture" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/plasmaball/plasmaballsprite_1.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/plasmaball/plasmaballsprite_0.png" type="Texture" id=3]
[ext_resource path="res://Fireball.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.75702, 3.48597 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0552486, 0.536364 ), 0.0, 0.0, 0, 0, Vector2( 0.983425, 0.409091 ), -1.94463, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
trail_size_modifier = SubResource( 4 )
emission_shape = 1
emission_sphere_radius = 2.31
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 50, 0 )
initial_velocity_random = 1.0
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed_random = 0.2

[sub_resource type="ParticlesMaterial" id=6]
trail_size_modifier = SubResource( 4 )
emission_shape = 1
emission_sphere_radius = 2.31
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 50, 0 )
initial_velocity_random = 1.0
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
hue_variation = 1.0
hue_variation_random = 0.32
anim_speed_random = 0.2

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 150.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 35.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.0

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 150.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 35.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.0
hue_variation = 1.0
hue_variation_random = 0.34

[node name="Fireball" type="Area2D"]
position = Vector2( 7, 9 )
z_index = 1
collision_layer = 513
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.242985, 0.48597 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -2, 0.500001 )
scale = Vector2( 0.6, 0.35 )

[node name="Trail_old" type="Particles2D" parent="."]
visible = false
amount = 25
preprocess = 0.1
explosiveness = 0.1
randomness = 0.1
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="Trail" type="Particles2D" parent="."]
amount = 25
preprocess = 0.1
explosiveness = 0.1
randomness = 0.1
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="Explosion_old" type="Particles2D" parent="."]
visible = false
z_index = -1
z_as_relative = false
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
randomness = 0.1
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="Explosion" type="Particles2D" parent="."]
z_index = -1
z_as_relative = false
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
randomness = 0.1
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
